[package]
name = "rust_src"
version = "0.1.0"
edition = "2024"
description = "Wasm build rust file"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rayon = "1.10.0"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = ["Window", "Performance", "console","Response"] }
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"

